# mutsig

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: genotype.rs  main.rs  reference.rs  result.rs  signature.rs
testdata/: ex1.vcf  ex2.fa  ex2.vcf
