[package]
name = "mutsig"
version = "1.0.0"
authors = ["Manuel Landesfeind <manuel.landesfeind@evotec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", default-features = false, features = ["bzip2", "lzma"] }
clap = "*"
log = "*"
pretty_env_logger = "*"


